--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
    display: flex;
    flex-direction: column;
    justify-content: space-between;
+   margin-bottom: 20px;
  }
 
  .hero {
@@ -45,6 +46,11 @@
 
  .welcome {
     display: flex;
+ }
+
+ .sign-up,
+ .hero-image {
+   flex: 1;
  }
 
  .main-text {
@@ -72,8 +78,9 @@
    justify-content: center;
  }
 
- /* .cards {   
- } */
+ .cards {
+   border-color: #3882F6;   
+ }
 
  /* .card-group {
  } */
