--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@
     text-decoration: none;
  }
 
+button {
+   background-color: #3882F6;
+   border-radius: 5px;
+   padding: 2px;
+   color: white;
+   width: 100px;
+}
  ul {
     list-style: none;
     display: flex;
@@ -48,6 +55,10 @@
     display: flex;
  }
 
+ .button-1 {
+   border: solid #3882F6;
+ }
+
  .sign-up,
  .hero-image {
    flex: 1;
@@ -69,23 +80,28 @@
  .info,
  .cards {
    display: flex;
-   align-items: center;
    justify-content: center;
+   align-items: center;
  }
 
- .info {
-   align-items: center;
-   justify-content: center;
+ .information {
+   flex-direction: column;
  }
 
- .cards {
-   border-color: #3882F6;   
- }
+ /* .info {
+
+ } */
+
+ /* .cards {
+   border: solid #3882F6; 
+ } */
 
  /* .card-group {
  } */
 
  /* .card {
+   border: solid #3882F6; 
+   flex-shrink: 0;
  } */
 
  /* .card-info {
@@ -120,10 +136,3 @@
    align-items: center;
    padding: 25px;
 }
-
- button {
-    background-color: #3882F6;
-    border-radius: 10px;
-    padding: 5px;
-    color: white;
- }
