--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ button {
  /* .sub {
  } */
 
+ .button-2 {
+   border: solid #F9FAF8;
+ }
+
 .footer {
    background-color: #1F2937;
    color: #E5E7EB;
