--- a/style.css
+++ b/style.css
@@ -89,20 +89,25 @@ button {
  }
 
  /* .info {
-
  } */
 
- /* .cards {
-   border: solid #3882F6; 
- } */
+ .cards {
+   display: flex;
+   gap: 15px;
+ }
 
- /* .card-group {
- } */
+ .card-group {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
 
- /* .card {
-   border: solid #3882F6; 
-   flex-shrink: 0;
- } */
+ .card {
+   border: solid #3882F6;
+   border-radius: 10px; 
+   width: 85px;
+   height: 85px;
+ }
 
  /* .card-info {
  } */
